--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,11 @@
 
 @layer base {
   body {
-    @apply text-white;
-    /* @apply bg-black; */
     font-family: "Instrument Serif", serif, sans-serif;
     font-weight: 400;
     font-style: normal;
     letter-spacing: normal;
+    background-color: #fefcf9;
   }
 }
 
